--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
 
     <!-- ============================================
          SERVICETITAN DNI TRACKING SCRIPT
-         Paste your ServiceTitan Dynamic Number Insertion 
-         script code below this comment:
     ============================================= -->
-    
-    <!-- END SERVICETITAN DNI SCRIPT -->
+    <!-- ServiceTitan DNI -->
+    <script>
+        dni = (function(q,w,e,r,t,y,u){q['ServiceTitanDniObject']=t;q[t]=q[t]||function(){
+            (q[t].q=q[t].q||[]).push(arguments)};q[t].l=1*new Date();y=w.createElement(e);
+            u=w.getElementsByTagName(e)[0];y.async=true;y.src=r;u.parentNode.insertBefore(y,u);
+            return q[t];
+        })(window,document,'script','https://static.servicetitan.com/marketing-ads/dni.js','dni');
+        dni('init', '38774401');
+        document.addEventListener('DOMContentLoaded', function() { dni('load'); }, false);
+    </script>
+    <!-- ServiceTitan DNI -->
 
 </head>
 <body>
