--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- ============================================
          SERVICETITAN DNI TRACKING SCRIPT
     ============================================= -->
-    
+
     <!-- ServiceTitan DNI -->
     <script>
         dni = (function(q,w,e,r,t,y,u){q['ServiceTitanDniObject']=t;q[t]=q[t]||function(){
@@ -31,7 +31,7 @@
             u=w.getElementsByTagName(e)[0];y.async=true;y.src=r;u.parentNode.insertBefore(y,u);
             return q[t];
         })(window,document,'script','https://static.servicetitan.com/marketing-ads/dni.js','dni');
-        dni('init', '38774401');
+        dni('init', '38774401' { api: 'https://mads-stage-dni.servicetitan.com'});
         document.addEventListener('DOMContentLoaded', function() { dni('load'); }, false);
     </script>
     <!-- ServiceTitan DNI -->
