--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
          SERVICETITAN DNI TRACKING SCRIPT
     ============================================= -->
 
-    <!-- ServiceTitan DNI -->
-    <script>
-        dni = (function(q,w,e,r,t,y,u){q['ServiceTitanDniObject']=t;q[t]=q[t]||function(){
-            (q[t].q=q[t].q||[]).push(arguments)};q[t].l=1*new Date();y=w.createElement(e);
-            u=w.getElementsByTagName(e)[0];y.async=true;y.src=r;u.parentNode.insertBefore(y,u);
-            return q[t];
-        })(window,document,'script','https://static.servicetitan.com/marketing-ads/dni.js','dni');
-        dni('init', '38774401', { api: 'https://mads-stage-dni.servicetitan.com'});
-        document.addEventListener('DOMContentLoaded', function() { dni('load'); }, false);
-    </script>
-    <!-- ServiceTitan DNI -->
+     <!-- ServiceTitan DNI -->
+<script>
+    dni = (function(q,w,e,r,t,y,u){q['ServiceTitanDniObject']=t;q[t]=q[t]||function(){
+        (q[t].q=q[t].q||[]).push(arguments)};q[t].l=1*new Date();y=w.createElement(e);
+        u=w.getElementsByTagName(e)[0];y.async=true;y.src=r;u.parentNode.insertBefore(y,u);
+        return q[t];
+    })(window,document,'script','https://static.servicetitan.com/marketing-ads/dni.js','dni');
+    dni('init', '61', { api: 'https://stcapacity-dni.qa.st.dev'});
+    document.addEventListener('DOMContentLoaded', function() { dni('load'); }, false);
+</script>
+<!-- ServiceTitan DNI -->
 
 </head>
 <body>
