--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         u=w.getElementsByTagName(e)[0];y.async=true;y.src=r;u.parentNode.insertBefore(y,u);
         return q[t];
     })(window,document,'script','https://static.servicetitan.com/marketing-ads/dni.js','dni');
-    dni('init', '4495617', { api: 'https://761tadpole-dni.qa.st.dev'});
+    dni('init', '4495617', { api: 'https://mad5847-dni.qa.st.dev/'});
     document.addEventListener('DOMContentLoaded', function() { dni('load'); }, false);
 </script>
 <!-- ServiceTitan DNI -->
